--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,13 @@ h4 {
     border-radius: 5px;
 }
 
+h5 {
+    font-family: var(--fonte-subtitulos);
+    font-size: 24px;
+    padding: 0.2em;
+    margin: 0;
+}
+
 ul {
     list-style-type: none;
 }
@@ -208,6 +215,12 @@ hr {
 
 .cabecalho h4 {
     background-color: var(--verde);
+}
+
+.endereco {
+    background-color: var(--salmao);
+    display: inline-block;
+    color: var(--fundo-escuro);
 }
 
 
