--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-/* variaveis */
+@import url(media.css);
 
+/* variaveis */
 :root {
     --fundo-escuro: #161616;
     --grafite: #393232;
     --off-white: #F2EDD7;
     --vermelho: #fa340d;
     --carne: #d13e20;
+    --carne-diluida: #d13e2085;
     --salmao: #faa885;
     --verde: #257c3b;
 
@@ -26,7 +28,7 @@ body {
 
 h1 {
     color: var(--off-white);
-    font-size: 56px;
+    font-size: 36px;
     margin: 0;
     font-family: var(--fonte-primaria);
     text-align: center;
@@ -57,6 +59,10 @@ h5 {
     font-size: 24px;
     padding: 0.2em;
     margin: 0;
+}
+
+p {
+    padding: 0.5em;
 }
 
 ul {
@@ -99,7 +105,7 @@ hr {
 }
 
 .icone {
-    max-width: 50px;
+    max-width: 40px;
     background-color: var(--off-white);
     border-radius: 5px;
 }
@@ -228,7 +234,23 @@ hr {
     align-items: center;
 }
 
-
-
-
 /* footer */
+.rodape {
+    background-color: var(--fundo-escuro);
+    display: flex;
+    justify-content: space-between;
+    padding: 1em 2em 0 2em;
+    align-items: center;
+}
+
+.rodape h2 {
+    font-size: 24px;
+}
+
+.rodape .img-logo {
+    height: 50px;
+}
+
+.rodape .icone {
+    margin: 0.5em;
+}
