--- a/styles.css
+++ b/styles.css
@@ -63,13 +63,20 @@ ul {
     list-style-type: none;
 }
 
-a {
+a, button {
     text-decoration: none;
     color: var(--off-white);
 }
 
-a:hover {
+a:hover, button:hover {
     color: var(--salmao);
+}
+
+button {
+    font-family: var(--fonte-secundaria);
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
 .btn {
@@ -203,6 +210,10 @@ hr {
     align-items: center;
     padding-bottom: 5em;
 }
+
+.div-popular .btn {
+    margin-left: 2em;
+}
 .itens-populares .img-fundo {
     max-width: 15em;
     border: solid 1px var(--verde);
@@ -228,6 +239,11 @@ hr {
     align-items: center;
 }
 
+.finaliza-compra {
+    display: flex;
+    justify-content: center;
+    margin: 2em;
+}
 
 
 
