--- a/styles.css
+++ b/styles.css
@@ -245,6 +245,12 @@ hr {
     margin: 2em;
 }
 
+span {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    border: dotted 2px var(--verde);
+}
 
 
 /* footer */
