--- a/styles.css
+++ b/styles.css
@@ -249,8 +249,23 @@ span {
     display: flex;
     justify-content: center;
     font-size: 36px;
-    border: dotted 2px var(--verde);
 }
 
+
+table {
+    border-collapse: collapse;
+    width: 60%;
+}
+
+th, td {
+    border: 1px solid var(--off-white); /* Define a borda pontilhada */
+    padding: 10px;
+    text-align: left;
+}
+
+/* Estilo para cabeçalho da tabela */
+th {
+    background-color: var(--verde);
+}
 
 /* footer */
